components/user-workload-monitoring/exporters/blackbox-exporter/blackbox-exporter-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: blackbox-exporter
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
